增加新版本

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ table {
 		font: normal 100% Helvetica, Arial, sans-serif;
 	}
 	
-.gray figure img 
+.gray  img 
 {
 	-webkit-filter: grayscale(0) blur(0);
 	filter: grayscale(0) blur(0);
