--- a/new.html
+++ b/new.html
@@ -87,20 +87,39 @@
 			
 
 		});
-li
-	{
-		
-		width:20%;
-		height:350px;
-		
-		float: left;
-	
-	}
-
-
+		function slide()
+		{
+			$('#top_menu').toggle(1);
+			$('#top_menu').toggle("slow");
+		}
+		function imgin()
+		{
+			document.getElementById("collection").style.cssText="-webkit-filter: blur(0px)";
+			document.getElementById("collection").style.cssText="width:100%"; 
+		}
+		function imgout()
+		{
+			document.getElementById("collection").style.cssText="-webkit-filter: blur(3px)";
+			document.getElementById("collection").style.cssText="width:100%"; 
+		}
 </script>
+<style>
+.collections figure img 
+{
+	-webkit-filter: grayscale(100%) blur(3px);
+	filter: grayscale(100%) blur(3px);
+}
+.collections figure:hover img 
+{
+-webkit-filter: grayscale(0) blur(0);
+	filter: grayscale(0) blur(0);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+	
+}
+</style>
 	</head>
-	<body>
+	<body onload="slide();">
 	<div id="header">
 		<nav class="navbar navbar-fixed-top navbar-inverse">
 		    <div class="container">
@@ -111,13 +130,14 @@ li
 					<span class="icon-bar"></span>
 				  </button>
 				</div>
-				<div class="navbar-inverse side-collapse-right in" id="menu">
+				<div class="navbar-inverse side-collapse-right in" id="top_menu">
 				  <nav role="navigation" class="navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
-					  <li><a href="#" class="goHOME">HOME</a></li>
+						<li>
+							<a href="#" class="goHOME">HOME</a>
+						</li>
 					  <li><a href="#">COLLECTIONS</a></li>
 					  <li><a href="＃">ABOUT</a></li>
-					  <li><a href="#">TEAM</a></li>
 					  <li><a href="＃">CONTACT</a></li>
 					</ul>
 				  </nav>
@@ -126,8 +146,8 @@ li
 	    </nav>
 	</div>
 	<div id="container">
-		<div id="banner">
-			<div style=" background-image:url(img/back_img.jpg); background-repeat: no-repeat;  position:relative; background-size:100% auto ;margin-top:1%;">
+		<div id="banner" style="">
+			<div style=" background-image:url(img/back_img.jpg); background-repeat: no-repeat;  position:relative; background-size:80% auto ;margin-top:1%;">
 				<div style="font-size:600%;font-family:impact;text-align:center;color:black;padding-top:33%;">
 					MY COLLECTIONS
 				</div>
@@ -136,8 +156,53 @@ li
 				</div>
 			</div>
 		</div>
-		<div id="collections" style="width:100%; min-height:100px;background-color:black;padding:3%;">
-			
+		<div class="collections" id="collections" style="width:100%; min-height:100px;padding:3%;">
+			<table>
+				<tr>
+					<td style="width:10%;padding:8px;border:1px solid black;text-align:center;">
+						<table>
+							<tr>
+								<td>
+									<figure>
+										<a href="https://github.com/e23882/java_faceGUI">
+											<img src="img/java_facegui.JPG" style="width:100%;"/>
+										</a>
+									</figure>
+								</td>
+							</tr>
+							<tr>
+								<td>
+								<a href="https://www.youtube.com/watch?v=kbSUkmYqmuA" style="font-family:impact;">
+									demo
+								</a>
+								</td>
+							</tr>
+						</table>
+					</td>
+					<td style="width:10%;padding:8px;border:1px solid black;text-align:center;">
+						<figure>
+							<img src="img/land.JPG" style="width:100%;" />
+						</figure>
+					</td>
+					<td style="width:10%;padding:8px;border:1px solid black;text-align:center;">
+						<figure>
+							<img src="img/taiwai.JPG" style="width:100%;" />
+						</figure>
+					</td>
+				</tr>
+				<tr>
+					<td style="width:10%;padding:8px;border:1px solid black;text-align:center;"><figure><img src="img/sas1.JPG" style="width:100%;" /></figure></td>
+					<td style="width:10%;padding:8px;border:1px solid black;text-align:center;"><figure><img src="img/sas2.JPG" style="width:100%;" /></figure></td>
+					<td style="width:10%;padding:8px;border:1px solid black;text-align:center;"><figure><img src="img/north.JPG" style="width:100%;" /></figure></td>
+				</tr>
+				<tr>
+					<td style="width:10%;padding:8px;border:1px solid black;text-align:center;"><figure><img src="img/3.JPG" style="width:100%;" /></figure></td>
+					<td style="width:10%;padding:8px;border:1px solid black;text-align:center;"><figure><img src="img/lineage.jpg" style="width:100%;" /></figure></td>
+					<td style="width:10%;padding:8px;border:1px solid black;text-align:center;"><figure><img src="img/nopic.png" style="width:100%;" /></figure></td>
+				</tr>
+				
+				
+			</table>
 		</div>
 	</div>
 	<div id="footer">
