--- a/index.html
+++ b/index.html
@@ -137,6 +137,18 @@
 						<div id="itemWord">土地政士網站</div>
 					</a>
 				</div>
+				<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12" id="item">
+					<a href="http://rr114.ddns.net/ToeicTest">						
+						<img src="img/toeic.png" id="itemImg"/>
+						<div id="itemWord">ToeicTest</div>
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12" id="item">
+					<a href="http://rr114.ddns.net/ibontest">						
+						<img src="img/ibon.png" id="itemImg"/>
+						<div id="itemWord">ibon活動</div>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
