--- a/index.html
+++ b/index.html
@@ -152,7 +152,13 @@
 				<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12" id="item">
 					<a href="http://rr114.ddns.net:8080/stream_simple.html">						
 						<img src="img/rpi.jpg" id="itemImg"/>
-						<div id="itemWord"></div>
+						<div id="itemWord">rpi</div>
+					</a>
+				</div>
+				<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12" id="item">
+					<a href="https://github.com/e23882/facedetect">						
+						<img src="img/detectface.png" id="itemImg"/>
+						<div id="itemWord">detect face</div>
 					</a>
 				</div>
 			</div>
